# test_llm_dgango

./: .env.example  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  schema.yml
chatapi/: admin.py  models.py  serializers.py  urls.py  views.py
chatapi/migrations/: 0001_initial.py
chatapi/services/: llm_langgraph.py  llm_langgraph_tools.py  llm_prompt_example.py  redis_service.py
config/: settings.py  urls.py
products/: admin.py  models.py
products/management/commands/: seed_products.py
products/migrations/: 0001_initial.py
